# lint-unused

./: .otto.yml  Cargo.toml  README.md  lint-unused.yml
docs/design/: 2026-03-03-lint-unused.md
src/: cli.rs  config.rs  discovery.rs  filter.rs  lib.rs  main.rs  parser.rs  reporter.rs
tests/: integration.rs
tests/fixtures/: all_binding_kinds.rs  drop_guards.rs  empty.rs  false_positives.rs  mixed.rs  syntax_error.rs
