[package]
name = "lint-unused"
version = "0.1.0"
edition = "2024"
authors = ["Scott Idler <scott.a.idler@gmail.com>"]
build = "build.rs"
description = "Detect underscore-prefixed variable bindings that suppress unused warnings"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
env_logger = "0.11.9"
eyre = "0.6.12"
log = "0.4.29"
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
syn = { version = "2.0.117", features = ["full", "visit"] }
walkdir = "2.5.0"

[build-dependencies]
# For build.rs if needed
